# zeropath-mcp-server

./: .gitignore  LICENSE  README.md  cursor_config.json  dev_mode.bash  main.py  pyproject.toml
src/zeropath_mcp_server/: __init__.py  __main__.py  jsonschema_validation.py  server.py  trpc_client.py
tests/: test_tools.py
