[project]
name = "zeropath-mcp-server"
version = "0.1.0"
description = "MCP server for interacting with ZeroPath security findings using natural language"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "ZeroPath", email = "support@zeropath.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "sast",
    "vulnerability",
    "zeropath",
    "appsec",
    "application-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.5.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://zeropath.com"
Documentation = "https://github.com/ZeroPathAI/zeropath-mcp-server#readme"
Repository = "https://github.com/ZeroPathAI/zeropath-mcp-server"
Issues = "https://github.com/ZeroPathAI/zeropath-mcp-server/issues"
Changelog = "https://github.com/ZeroPathAI/zeropath-mcp-server/releases"

[project.scripts]
zeropath-mcp-server = "zeropath_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zeropath_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
